--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "tenderly:push": "node ./_scripts.js tenderly:push"
   },
   "dependencies": {
-    "date-fns": "^2.28.0"
+    "@types/lodash": "^4.14.182",
+    "date-fns": "^2.28.0",
+    "lodash": "^4.17.21"
   }
 }
