refactor(booking_facet): rename ProofOfPresence to Booking

--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "fork:dev": "node ./_scripts.js fork:dev",
     "fork:node": "node ./_scripts.js fork:node",
     "fork:test": "node ./_scripts.js fork:test",
-    "tenderly:push": "node ./_scripts.js tenderly:push"
+    "tenderly:push": "node ./_scripts.js tenderly:push",
+    "commit": "npx git-cz"
   },
   "dependencies": {
     "@types/lodash": "^4.14.182",
