--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^4.0.0",
     "@types/chai": "^4.3.0",
+    "@types/luxon": "^3.0.1",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
@@ -40,7 +41,9 @@
     "hardhat-deploy-tenderly": "^0.1.1",
     "hardhat-diamond-abi": "^2.0.0",
     "hardhat-gas-reporter": "^1.0.8",
+    "luxon": "^3.0.4",
     "mocha": "^9.2.2",
+    "moment": "^2.29.4",
     "prettier": "^2.6.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
