--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "commit": "npx git-cz"
   },
   "dependencies": {
+    "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
     "@types/lodash": "^4.14.182",
     "date-fns": "^2.28.0",
     "lodash": "^4.17.21"
