--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^4.0.0",
     "@types/chai": "^4.3.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/luxon": "^3.0.1",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.23",
@@ -35,7 +36,7 @@
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "ethers": "^5.6.2",
-    "fs-extra": "^10.0.1",
+    "fs-extra": "^10.1.0",
     "hardhat": "^2.9.2",
     "hardhat-deploy": "^0.11.4",
     "hardhat-deploy-tenderly": "^0.1.1",
