added minting method in contracts

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,49 @@
-# network specific node uri : `"ETH_NODE_URI_" + networkName.toUpperCase()`
-ETH_NODE_URI_MAINNET=https://eth-mainnet.alchemyapi.io/v2/<apiKey>
+################################
+# Networks Http services
+# Alchemy or Infura
+# network specific  uri
+# code:
+#
+#     `"ETH_NODE_URI_" + networkName.toUpperCase()`
+################################
 # generic node uri (if no specific found) :
-ETH_NODE_URI=https://{{networkName}}.infura.io/v3/<apiKey>
+ETH_NODE_URI=https://{{networkName}}.infura.io/v3/[Your Key here]
+# ETH_NODE_URI_POLYGON=
+# ETH_NODE_URI_MUMBAI=
+# ETH_NODE_URI_MAINNET=
 
-# network specific mnemonic : `"MNEMONIC_ " + networkName.toUpperCase()`
-MNEMONIC_MAINNET=<mnemonic for mainnet>
+################################
+# Network specific mnemonic
+# code:
+#
+#      `"MNEMONIC_ " + networkName.toUpperCase()`
+################################
+# MNEMONIC_MAINNET=<mnemonic for mainnet>
 # generic mnemonic (if no specific found):
-MNEMONIC=<mnemonic>
+# MNEMONIC=<mnemonic>
 
 # coinmarketcap api key for gas report
-COINMARKETCAP_API_KEY=
-TENDERLY_USERNAME=
+# COINMARKETCAP_API_KEY=
+
+################################
+# private Keys: $$$$$$$$$$$$$
+# CAREFUL HERE :nerd_face:
+################################
+# PRIVATE_KEY=
+# SECONDARY_PRIVATE_KEY=
+
+# Etherscan to verify Eth network contracts
+#  ETHERSCAN_API_KEY=
+
+################################
+# utils/networks.ts variables
+################################
+# HARDHAT_FORK=celo
+# HARDHAT_FORK_NUMBER=26229349
+# MINING_INTERVAL=
+
+################################
+# hardhat.ts variables
+################################
+REPORT_GAS=true
+# LOCALHOST_PORT=7545
