--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "ethers": "^5.6.2",
     "fs-extra": "^10.1.0",
     "hardhat": "^2.9.2",
-    "hardhat-deploy": "^0.11.4",
+    "hardhat-deploy": "0.11.22",
     "hardhat-deploy-tenderly": "^0.1.1",
     "hardhat-diamond-abi": "^2.0.0",
     "hardhat-gas-reporter": "^1.0.8",
